objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>SO_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SO_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same person</fullName>
                </value>
                <value>
                    <fullName>Household member</fullName>
                </value>
                <value>
                    <fullName>Business Partner</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Referral Contact</fullName>
                </value>
                <value>
                    <fullName>Contact Person</fullName>
                    <label>Contact Person (e.g. PA)</label>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Retailer Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Strength__c</fullName>
        <label>Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>